work in progress. sync data output for new api to old api
